add content entity, modify relation bettween Post and Attachment to 1 - n then fix createPost, getPosts. Handle updatePost, deletePost, sharePost, getNewFeeds